--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,14 @@ body {
   display: inline-block;
   vertical-align: middle;
 }
+
+table,
+th,
+td,
+tr {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
